--- a/ColeccionDeJuegos/Base.lproj/Main.storyboard
+++ b/ColeccionDeJuegos/Base.lproj/Main.storyboard
@@ -1,24 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="R8k-0J-mKt">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qZf-fZ-ljg">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jDw-kx-5EB">
+                            <connections>
+                                <segue destination="4uz-Vp-PT9" kind="show" id="pCV-zr-YyU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="891" y="104"/>
+        </scene>
+        <!--Juego View Controller-->
+        <scene sceneID="Xrh-QB-WMx">
+            <objects>
+                <viewController id="4uz-Vp-PT9" customClass="JuegoViewController" customModule="ColeccionDeJuegos" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Smq-xI-meQ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k3u-wM-l0t">
+                                <rect key="frame" x="67" y="64" width="280" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Toh-QV-HAv"/>
+                                    <constraint firstAttribute="width" constant="280" id="xMq-fo-hRm"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Titulo" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ihw-hi-BIJ">
+                                <rect key="frame" x="67" y="234" width="280" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="Fkt-Fl-hNG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kcH-WU-Idd">
+                                <rect key="frame" x="179.66666666666666" y="288" width="55" height="30"/>
+                                <state key="normal" title="Agregar"/>
+                                <connections>
+                                    <action selector="agregarTapped:" destination="4uz-Vp-PT9" eventType="touchUpInside" id="f8K-dW-vvy"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="tts-cS-5MJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="k3u-wM-l0t" firstAttribute="centerX" secondItem="Smq-xI-meQ" secondAttribute="centerX" id="3ht-pK-zRo"/>
+                            <constraint firstItem="k3u-wM-l0t" firstAttribute="top" secondItem="tts-cS-5MJ" secondAttribute="top" constant="20" id="SZW-M4-zW4"/>
+                            <constraint firstItem="kcH-WU-Idd" firstAttribute="centerX" secondItem="Smq-xI-meQ" secondAttribute="centerX" id="Yck-Bt-6e7"/>
+                            <constraint firstItem="ihw-hi-BIJ" firstAttribute="centerX" secondItem="Smq-xI-meQ" secondAttribute="centerX" id="aG5-03-525"/>
+                            <constraint firstItem="ihw-hi-BIJ" firstAttribute="width" secondItem="k3u-wM-l0t" secondAttribute="width" id="h5E-2L-FEd"/>
+                            <constraint firstItem="ihw-hi-BIJ" firstAttribute="top" secondItem="k3u-wM-l0t" secondAttribute="bottom" constant="20" id="u3b-bh-Q9c"/>
+                            <constraint firstItem="kcH-WU-Idd" firstAttribute="top" secondItem="ihw-hi-BIJ" secondAttribute="bottom" constant="20" id="yQ3-XH-DRE"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="eMa-34-2FC">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="l2j-f4-d7F">
+                                <connections>
+                                    <action selector="camaraTapped:" destination="4uz-Vp-PT9" id="Yaf-Sc-Fj9"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Fotos" id="1Dh-SR-oQU">
+                                <connections>
+                                    <action selector="fotosTapped:" destination="4uz-Vp-PT9" id="HmB-Eo-28C"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="JuegoImageView" destination="k3u-wM-l0t" id="Hg7-R9-mdA"/>
+                        <outlet property="tituloTextField" destination="ihw-hi-BIJ" id="geR-kg-nzE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bbu-Ul-lTc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1627.536231884058" y="101.90217391304348"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="UOB-mX-Pbc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="R8k-0J-mKt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eY0-Pu-XIw">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="9kX-Dc-z67"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="57I-bP-BbK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140.57971014492756" y="103.53260869565219"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
